test/parser/ast/literals/invalid_dec_int.exp
Error: Unexpected token `A`, expected `;`
test/parser/ast/literals/invalid_dec_int.myte:4:4
 4 |   12A;
   |     ^